Bug 125475 - Crash after saving and/or closing document
Summary: Crash after saving and/or closing document
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:6.3.0
Keywords: bibisected, haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2019-05-24 08:11 UTC by Telesto
Modified: 2019-06-05 10:06 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (14.37 KB, text/plain)
2019-05-24 20:50 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2019-05-24 08:11:32 UTC
Description:
Crash after saving and/or closing document

Steps to Reproduce:
Steps to Reproduce:
1. Open attachment 147138 [details]
2. CTRL+A + CTRL+C
3. CTRL+N
4. CTRL+V
5. Scroll up to second page (with yellow marking)
6. CTRL+V somewhere in that area
7. Press Save (possible crash)
8. Press red close button (crash)

Based on 122736

Layout is a smoking ruin


Actual Results:
Crash

Expected Results:
No crash


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.3.0.0.alpha1+
Build ID: 959e8ae7ea33ce94dd80ee8ea172b6db64593873
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-05-21_23:35:12
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL
Comment 1 Telesto 2019-05-24 08:12:49 UTC
swlo.dll - swlo!SwTextFrame::PaintSwFrame
Comment 2 Xisco Faulí 2019-05-24 09:01:19 UTC
Not reproduced in

Versión: 6.2.3.2
Id. de compilación: aecc05fe267cc68dde00352a451aa867b3b546ac
Subprocs. CPU: 1; SO: Windows 6.1; Repres. IU: predet.; VCL: win; 
Configuración regional: es-ES (es_ES); Idioma de IU: es-ES
Calc: threaded
Comment 3 Julien Nabet 2019-05-24 14:21:21 UTC
Just for the record, I don't reproduce this on Win10 + master sources updated today.
Comment 4 Telesto 2019-05-24 19:20:17 UTC
New attempt
1. Open attachment 147138 [details]
2. CTRL+A + CTRL+C
3. CTRL+N
4. CTRL+V
5. Close button (red cross) for the new document & the source document
6. Reopen layout-single-page-view from start center (clicking the preview)
Comment 5 Julien Nabet 2019-05-24 20:50:55 UTC
Created attachment 151666 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I could reproduce this by following last Telesto's comment.
Comment 6 Xisco Faulí 2019-05-27 11:07:02 UTC
(In reply to Telesto from comment #4)
> New attempt
> 1. Open attachment 147138 [details]
> 2. CTRL+A + CTRL+C
> 3. CTRL+N
> 4. CTRL+V
> 5. Close button (red cross) for the new document & the source document
> 6. Reopen layout-single-page-view from start center (clicking the preview)

Regression introduced in range https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=b593634d3cfbb2fc8522d99ce1c3f2a11445ea59..bf8c8699f7ed09519db2041e1ec1554097e94ab4

When it started to crash at step 5.
Later, this crash was fixed in https://cgit.freedesktop.org/libreoffice/core/commit/?id=e14056e6e88d9b8d988b7b88b2776a8fc952031b, so now it crashes at step 6.

The problem is not reproduced in

Version: 6.2.5.0.0+
Build ID: 0d657498080aad86f4b97309fff9bf589c57dc2e
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

I believe this is introduced by the commits for bug 122607
Comment 7 Commit Notification 2019-05-28 12:13:41 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/1424d51a44ed2fa8b37b2d132af8a608a170ec8e%5E%21

tdf#125475 sw: update SwTextFrames when SwTextLine cache shrinks

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Xisco Faulí 2019-06-04 19:36:07 UTC
I can't reproduce the crash in

Version: 6.4.0.0.alpha0+
Build ID: 8caa7d1824ff87a82ba2f6f16351dfab5b219f63
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Michael Stahl, can we call this issue FIXED ?
Comment 9 Michael Stahl 2019-06-05 09:22:33 UTC
fixed on master

i've found another crash with this bugdoc for which i've filed bug 125685
Comment 10 Xisco Faulí 2019-06-05 09:45:24 UTC
Setting to VERIFIED as per comment 8.

@Michael Stahl, thanks for fixing this issue!
Comment 11 Telesto 2019-06-05 10:06:08 UTC
(In reply to Xisco Faulí from comment #10)
> Setting to VERIFIED as per comment 8.
> 
> @Michael Stahl, thanks for fixing this issue!

Indeed, thanks for fixing all those table issues.. They unexpected crashes where rather frustrating..