sw/source/core/text/txtfrm.cxx
@@ -693,10 +693,7 @@ void SwTextFrame::DestroyImpl()
 
 SwTextFrame::~SwTextFrame()
 {
-    if (GetCacheIdx() != USHRT_MAX)
-    {
-        s_pTextCache->Delete(this, GetCacheIdx());
-    }
+    RemoveFromCache();
 }
 
 namespace sw {
